# Homework_Bank_widget

./: .env.example  Homework_10.1.md  Homework_10.2.md  Homework_11.2.md  Homework_9.1.md  Homework_9.2.md  README.md  mylog.txt  pyproject.toml  requirements.txt
bank_personal_acc/: Homework_9.1.md  README_2.md  pyproject.toml
bank_personal_acc/scr/: masks.py  widget.py
data/: test_file.json
exportToHTML/: .flake8.html  index.html  poetry.lock.html  pyproject.toml.html  requirements.txt.html
scr/: masks.py  processing.py
src/: decorators.py  external_api.py  generators.py  masks.py  mylog.txt  processing.py  utils.py  widget.py
tests/: conftest.py  mylog.txt  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
